edited view emp profile html

--- a/src/app/employee-sub-system/view-employee-profile/view-employee-profile.component.html
+++ b/src/app/employee-sub-system/view-employee-profile/view-employee-profile.component.html
@@ -60,7 +60,7 @@
                                   <table class="table">
                                       <thead  style="background-color: rgb(103, 186, 241);">
                                         <tr>
-                                          <th scope="col">Initial</th>
+                                          <th scope="col">Name</th>
                                           <th scope="col">Surname</th>
                                         </tr>
                                       </thead>
