edited add slot html

--- a/src/app/Admin/Meeting/add-slot/add-slot.component.html
+++ b/src/app/Admin/Meeting/add-slot/add-slot.component.html
@@ -7,7 +7,7 @@
             <div class="row form-group">
                 <div class="col-lg-6 col-md-4 col-sm-8 col-12">
                     <label>Date:</label>
-                    <input type="date" class="form-control" formControlName="date">
+                    <input type="date" class="form-control" formControlName="date" [min]="todayDate">
                 </div>
             </div>
             <div class="row form-group">
