edited meeting detail html

--- a/src/app/Admin/Meeting/meeting-detail/meeting-detail.component.html
+++ b/src/app/Admin/Meeting/meeting-detail/meeting-detail.component.html
@@ -30,6 +30,8 @@
                             <th scope="col">StartTime</th>
                             <th scope="col">EndTime</th>
                             <th scope="col">Client Name</th>
+                            <th scope="col">Client Phone Number</th>
+
                           </tr>
                         </thead>
                         <tbody>
@@ -38,6 +40,7 @@
                             <td scope="row">{{slot.startTime | date:'shortTime'}}</td>
                             <td scope="row">{{slot.endTime | date:'shortTime'}}</td>
                             <td scope="row">{{slot.clientName}}</td>
+                            <td scope="row">{{slot.clientPhone}}</td>
                         </tbody>
                       </table>
                   </div>
