--- a/src/app/report-sub-system/monthly-stock-report/monthly-stock-report.component.html
+++ b/src/app/report-sub-system/monthly-stock-report/monthly-stock-report.component.html
@@ -1,55 +1,58 @@
 <div class="card" >
-    <div class="card-header text-center">
-      <h3>Monthly Stock Report </h3>
-    </div>
-    <div class="card-body">
-      <div class="row">
-        <div class="col-2">
-        </div>
-        <div class="col-lg-4 col-md-3 col-sm-6 col-12">
-          <span class="input-group" style="float: right;">
-            <input type="month" class="form-control"  aria-describedby="basic-addon1" [(ngModel)]="dateData">
-            <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="getStockMonthlyReport()">Get Report</button>
-          </span>
-        </div>
-        <div class="col-2">
-        </div>
+  <div class="card-header text-center">
+    <h3>Monthly Stock Report </h3>
+  </div>
+  <div class="card-body">
+    <div class="row">
+      <div class="col-2">
       </div>
-      <div class="row mt-5 mb-5">
-        <div class="col-1">
-        </div>
-        <div class="col-10">
-  
-          <div class="card" id="report">
-            <div class="card-body">
-              <div class="row">
-                <table class="table">
-                  <thead  style="background-color: rgb(103, 186, 241);">
-                    <tr>
-                      <th scope="col">Product Name</th>
-                      <th scope="col">Product Size</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr *ngFor="let product of productData">
-                      <td scope="row">{{product.productName}}</td>
-                      <td scope="row">{{product.productSizeDescription}}</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
+      <div class="col-lg-4 col-md-3 col-sm-6 col-12">
+        <span class="input-group" style="float: right;">
+          <input type="month" class="form-control"  aria-describedby="basic-addon1" [(ngModel)]="dateData">
+          <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="getStockMonthlyReport()">Get Report</button>
+        </span>
+      </div>
+      <div class="col-2">
+      </div>
+    </div>
+    <div class="row mt-5 mb-5">
+      <div class="col-1">
+      </div>
+      <div class="col-10">
+
+        <div class="card" id="report">
+          <div class="card-body">
+            <div class="row">
+              <table class="table">
+                <thead  style="background-color: rgb(103, 186, 241);">
+                  <tr>
+                    <th scope="col">Product Name</th>
+                    <th scope="col">Product Size</th>
+                    <th scope="col">Product Type</th>
+                    <th scope="col">Product Quantity</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let product of productData">
+                    <td scope="row">{{product.productName}}</td>
+                    <td scope="row">{{product.productSizeDescription}}</td>
+                    <td scope="row">{{product.productTypeName}}</td>
+                    <td scope="row">{{product.quantity}}</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
-  
         </div>
-        <div class="col-1">
-        </div>
+
       </div>
-    </div>
-    <div class="row">
-      <div class="co-12">
-        <button class="btn btn-primary" (click)="downloadPDF()" style="float: right;" [disabled]="productData.length==0">Download Report</button>
+      <div class="col-1">
       </div>
     </div>
   </div>
-  
+  <div class="row">
+    <div class="co-12">
+      <button class="btn btn-primary" (click)="downloadPDF()" style="float: right;" [disabled]="productData.length==0">Download Report</button>
+    </div>
+  </div>
+</div>
