Made spelling changes

--- a/src/app/Admin/Order/view-client-order-detail/view-client-order-detail.component.html
+++ b/src/app/Admin/Order/view-client-order-detail/view-client-order-detail.component.html
@@ -42,7 +42,7 @@
     <div class="row mt-5">
       <div class="card">
         <div class="card-header ">
-          <h5>Order Summery</h5>
+          <h5>Order Summary</h5>
         </div>
         <div class="card-body">
           <div class="row">
@@ -86,7 +86,7 @@
     <div class=" row mt-5">
       <div class="card">
           <div class="card-header ">
-            <h5>Delivry Type</h5>{{orderData?.deliveryType}}
+            <h5>Delivery Type</h5>{{orderData?.deliveryType}}
           </div>
         </div>
     </div>
@@ -96,7 +96,7 @@
     <div class=" row mt-5" >
       <div class="card">
           <div class="card-header ">
-            <h5>Payment Type Type</h5>{{orderData?.paymentType}}
+            <h5>Payment Type</h5>{{orderData?.paymentType}}
           </div>
         </div>
     </div>
@@ -104,7 +104,7 @@
     <div class=" row mt-5">
       <div class="card">
           <div class="card-header ">
-            <h5>Payment Type Type</h5>
+            <h5>Payment Type</h5>
           </div>
           <div class="card-body">
               <div class="row form-group">
@@ -126,7 +126,7 @@
     <div class=" row mt-5">
       <div class="card">
           <div class="card-header ">
-            <h5>Card Detail</h5>
+            <h5>Card Details</h5>
           </div>
           <div class="card-body">
               <div class="row form-group">
