--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,23 +43,23 @@
                   </button>
                   <div class="collapse show" id="home-collapse">
                       <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                          <li><a [routerLink]="'/admin/detail'" class="link-dark rounded">Admins Detail</a></li>
-                          <li><a [routerLink]="'/client/list'" class="link-dark rounded">Client Detail</a></li>
-                          <li><a [routerLink]="'/employee/detail'" class="link-dark rounded">Employee Detail</a></li>
+                          <li><a [routerLink]="'/admin/detail'" class="link-dark rounded">Admin Details</a></li>
+                          <li><a [routerLink]="'/client/list'" class="link-dark rounded">Client Details</a></li>
+                          <li><a [routerLink]="'/employee/detail'" class="link-dark rounded">Employee Details</a></li>
                           <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/team/detail'">Teams</a></li>
                           <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/team/attendanceHistory'">Team Attendance History</a></li>
                           <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/orders/all'">Orders</a></li>
-                          <li><a [routerLink]="'/order/deliveryType/detail'" class="link-dark rounded">Delivery Type</a></li>
+                          <li><a [routerLink]="'/order/deliveryType/detail'" class="link-dark rounded">Delivery Types</a></li>
                           <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/location/detail'">Locations</a></li>
-                          <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/meeting/slot-detail'">slot Detail</a></li>
+                          <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/meeting/slot-detail'">Slot Details</a></li>
                           <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/meeting/detail'">Booked Slots</a></li>
                           <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/enquiry/detail'">Enquiries</a></li>
                           <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/product/list'">Products</a></li>
                           <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/product/size/detail'">Add Product Size</a></li>
-                          <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/product/type/detail'">Add Products Type</a></li>
+                          <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/product/type/detail'">Add Product Category</a></li>
                           <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/stock/detail'">Stock</a></li>
                           <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/audit'">Audit</a></li>
-                          <li><a [routerLink]="'/admin/enquiry-type-detail'" class="link-dark rounded">Enquery Type</a></li>
+                          <li><a [routerLink]="'/admin/enquiry-type-detail'" class="link-dark rounded">Enquiry Type</a></li>
                       </ul>
                   </div>
               </li>
