--- a/src/app/client-sub-system/order-detail/order-detail.component.html
+++ b/src/app/client-sub-system/order-detail/order-detail.component.html
@@ -86,7 +86,7 @@
       <div class=" row mt-5">
         <div class="card">
             <div class="card-header ">
-              <h5>Delivry Type</h5>{{orderData?.deliveryType}}
+              <h5>Delivery Type</h5>{{orderData?.deliveryType}}
             </div>
           </div>
       </div>
@@ -96,7 +96,7 @@
       <div class=" row mt-5" >
         <div class="card">
             <div class="card-header ">
-              <h5>Payment Type Type</h5>{{orderData?.paymentType}}
+              <h5>Payment Type</h5>{{orderData?.paymentType}}
             </div>
           </div>
       </div>
