--- a/src/app/order-sub-system/checkout/checkout/checkout.component.html
+++ b/src/app/order-sub-system/checkout/checkout/checkout.component.html
@@ -42,7 +42,7 @@
     <div class="row mt-5">
       <div class="card">
         <div class="card-header ">
-          <h5>Order Summery</h5>
+          <h5>Order Summary</h5>
         </div>
         <div class="card-body">
           <div class="row">
@@ -86,7 +86,7 @@
     <div class=" row mt-5">
       <div class="card">
           <div class="card-header ">
-            <h5>Delivry Type</h5>
+            <h5>Delivery Type</h5>
           </div>
           <div class="card-body">
             <form [formGroup]="deliveryTypeForm">
@@ -106,7 +106,7 @@
     <div class=" row mt-5" *ngIf="showPaymentMethod">
       <div class="card">
           <div class="card-header ">
-            <h5>Payment Type Type</h5>
+            <h5>Payment Type</h5>
           </div>
           <div class="card-body">
             <form [formGroup]="paymentTypeForm">
