Client profile html fixed

--- a/src/app/client-sub-system/client-profile/client-profile.component.html
+++ b/src/app/client-sub-system/client-profile/client-profile.component.html
@@ -6,7 +6,7 @@
       <div class="card-body">
           <div class="row form-group">
             <div class="col-lg-6 col-md-4 col-sm-8 col-12">
-              <h4>Initials:  <span><b>{{clientData.initials}}</b></span></h4>
+              <h4>Name:  <span><b>{{clientData.initials}}</b></span></h4>
             </div>
           </div>
           <div class="row form-group">
