add enquiry html fixed

--- a/src/app/client-sub-system/Enquiries/add-enquiry/add-enquiry.component.html
+++ b/src/app/client-sub-system/Enquiries/add-enquiry/add-enquiry.component.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="card-body">
                     <form [formGroup]="addEnquiryForm">
-                        <div class="row form-group">
+                        <!-- <div class="row form-group">
                             <div class="col-lg-6 col-md-4 col-sm-8 col-12">
                                 <label>Admin:</label>
                                 <select  class="form-control" formControlName="adminUserId">
@@ -21,7 +21,7 @@
                                   <option [value]="admin.userId" *ngFor="let admin of adminData">{{admin.initials+' '+admin.surname}}</option>
                                 </select>    
                             </div>
-                        </div>
+                        </div> -->
                           <div class="row form-group">
                             <div class="col-lg-6 col-md-4 col-sm-8 col-12">
                                 <label>Enquiry Type:</label>
