--- a/src/app/Admin/Location/add-location/add-location.component.html
+++ b/src/app/Admin/Location/add-location/add-location.component.html
@@ -20,9 +20,13 @@
             <div class="row form-group">
               <div class="col-lg-6 col-md-4 col-sm-8 col-12">
                 <label>Location Province:</label>
-                <input type="text" class="form-control" placeholder="province" formControlName="province">
+                <select name="" id="" class="form-control" formControlName="province">
+                  <option value="none">--Select Province--</option>
+                  <option [value]="province.provinceName" *ngFor="let province of provinces">{{province.provinceName}}</option>
+                </select>
               </div>
             </div>
+
           </form>
         </div>
       </div>
