edited stock detail html

--- a/src/app/Admin/Stock/stock-detail/stock-detail.component.html
+++ b/src/app/Admin/Stock/stock-detail/stock-detail.component.html
@@ -45,6 +45,8 @@
                           <td scope="row">{{product.productQuantity}}</td>
                           <td scope="row">
                               <button class="btn btn-outline-primary" (click)="writeOffStockProduct(product)">WriteOff</button>
+                              <button class="btn btn-outline-primary" (click)="completeStockProduct(product)">Complete</button>
+
                           </td>
                         </tr>
                       </tbody>
