--- a/src/app/Admin/Team/attendance/attendance.component.html
+++ b/src/app/Admin/Team/attendance/attendance.component.html
@@ -4,12 +4,23 @@
             <h3>Team Attendance</h3>
         </div>
           <div class="card-body">
-        
+
             <div class="row mt-5 mb-5">
                 <div class="col-2">
                 </div>
               <div class="col-8">
-                  
+                <div class="row mb-5 mt-5">
+                  <div class="col-12">
+                    <button class="btn btn-primary mr-5" style="float: right;"  (click)="exportToExcel()">Export Template</button>
+    
+                    <input type="file"  style="display: none;" (change)="onChange($event)" #inputFile>
+                    <button class="btn btn-primary" style="float: right;"  (click)="inputFile.click()">Import Attendance</button>
+                    <div *ngIf="isExcelFile === false">
+                    This is not an Excel file
+                    </div>
+                  </div>
+                </div>
+    
                   <div class="card">
                     <div  class="card-header text-center">
                       <div class="row">
@@ -42,12 +53,12 @@
                                   <td scope="row">{{attendance.surname}}</td>
                                   <td scope="row">
                                     <div class="form-check">
-                                      <input class="form-check-input" type="radio" [name]="attendance.initials" [id]="attendance.attendanceId" [checked]="attendance.present"  (change)="markPresent(attendance)">
+                                      <input class="form-check-input" type="radio" [name]="attendance.attendanceId" [id]="attendance.attendanceId" [checked]="attendance.present"  (change)="markPresent(attendance)">
                                     </div>
                                   </td>
                                   <td scope="row">
                                     <div class="form-check">
-                                      <input class="form-check-input" type="radio" [name]="attendance.initials" [id]="attendance.attendanceId" [checked]="attendance.absent" (change)="markAbsent(attendance)">
+                                      <input class="form-check-input" type="radio" [name]="attendance.attendanceId" [id]="attendance.attendanceId" [checked]="attendance.absent" (change)="markAbsent(attendance)">
                                     </div>
                                   </td>
                                   <td scope="row">
