--- a/src/app/Home/home/home.component.html
+++ b/src/app/Home/home/home.component.html
@@ -1,27 +1,27 @@
 <div class="card ">
-    <div  class="card-header text-center">
-      <h3>Home</h3>
-    </div>
-    <div class="card-body">
-      <div class="row mt-5 mb-5">
-          <div class="col-2">
+  <div  class="card-header text-center">
+    <h3>Home</h3>
+  </div>
+  <div class="card-body">
+    <div class="row mt-5 mb-5">
+        <div class="col-2">
 
-          </div>
-        <div class="col-15">
-            
-            <div class="card">
-                <div class="card-body">
+        </div>
+      <div class="col-15">
+          
+          <div class="card">
+              <div class="card-body">
 
-                    <h1>Welcome to Louman Farms!</h1>
-                    <iframe width="956" height="538" src="https://www.youtube.com/embed/0dstV5dHkvA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    
-                    <h2>About us </h2>
-                    <p>Here at Louman Farms we ensure that all our focus is placed on produce quality, and most importantly our customers satisfaction . 
-                    <br><br> Louman Farms offers selling vegetables to wholesales as well as retail shops though markets as well as directly to the public. </p>
+                  <h1>Welcome to Louman Farms!</h1>
+                  <iframe width="956" height="538" src="https://www.youtube.com/embed/0dstV5dHkvA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  
+                  <h2>About us </h2>
+                  <p>Here at Louman Farms we ensure that all our focus is placed on produce quality, and most importantly our customers satisfaction . 
+                  <br><br> Louman Farms offers selling vegetables to wholesales as well as retail shops though markets as well as directly to the public. </p>
 
-                    <h2>Our History </h2>
-                    <p> Louman Farms is a large vegetable farm that has been operating for over 25 years.<br><br>
-                     The family owned business was established in 1992 by Louis Borrageiro as a small business with very few employees. The business started off by selling and making wooded crates in conjunction with selling vegetables.
+                  <h2>Our History </h2>
+                  <p> Louman Farms is a large vegetable farm that has been operating for over 25 years.<br><br>
+                   The family owned business was established in 1992 by Louis Borrageiro as a small business with very few employees. The business started off by selling and making wooded crates in conjunction with selling vegetables.
 
 ​
 
@@ -41,15 +41,27 @@ Today, Louman Farms is a well-known reliable brand for their quality in produce 
 Cell number:0843694844 <br>
 Email: laborr@vodamail.co.za <br><br>
 
+
 Submit further enquiries through our website  </p>
-                </div>
               </div>
-
-        </div>
-        <div class="col-2">
-
-        </div>
+            </div>
 
       </div>
+      <div class="col-2">
+        <div >
+          <p>
+            Scan Code below to be redirected to google Maps:
+          </p>
+        </div>
+         
+        <ngx-qrcode 
+              [elementType]="elementType" 
+              [value] = "value"
+              cssClass = "aclass"
+              [errorCorrectionLevel] = correctionlevel>
+        </ngx-qrcode>
+      </div>
+
     </div>
   </div>
+</div>
