--- a/src/app/client-sub-system/order-detail/order-detail.component.html
+++ b/src/app/client-sub-system/order-detail/order-detail.component.html
@@ -61,7 +61,7 @@
                         <td scope="row">{{product.product.productName}}</td>
                         <td scope="row">{{product.product.productTypeName}}</td>
                         <td scope="row">{{product.product.productSizeDescription}}</td>
-                        <td scope="row">{{product.product.price}}</td>
+                          <td scope="row">R{{product.product.price | number:'.1-3'}}</td>
                         <td scope="row">{{product.quantity}}</td>
                       </tr>
                     </tbody>
@@ -70,12 +70,12 @@
               <div class="card-body mt-3">
                 <div class="row">
                     <div class="col-lg-6">
-                        <h5>Discount:</h5>{{orderData?.discount}}
+                         <h5>Discount:</h5>R{{orderData?.discount | number:'.1-3'}}
                     </div>
                 </div>
                 <div class="row">
                   <div class="col-lg-6">
-                      <h5>Total:</h5>{{orderData?.total}}
+                       <h5>Total:</h5>R{{orderData?.total | number:'.1-3'}}
                   </div>
               </div>
             </div>    
