--- a/src/app/Admin/components/admin-detail/admin-detail.component.html
+++ b/src/app/Admin/components/admin-detail/admin-detail.component.html
@@ -41,6 +41,7 @@
                     <td scope="row">{{admin.surname}}</td>
                     <td scope="row">
                       <button class="btn btn-outline-primary" (click)="editAdmin(admin)">View</button>
+                      <button class="btn btn-outline-primary" (click)="viewAdminRole(admin)">Roles</button>
                       <button class="btn btn-outline-primary"  data-bs-toggle="modal" data-bs-target="#deletionConfirmation" (click)="deleteAdmin(admin)" >Delete</button>
                     </td>
                   </tr>
